--- a/frontend/src/css/container.css
+++ b/frontend/src/css/container.css
@@ -9,5 +9,5 @@
     transition: opacity 1s ease-out;
     will-change: opacity;
 
-    z-index: var(-z-base);
+    z-index: var(--z-base);
 }
