--- a/frontend/src/css/weather.css
+++ b/frontend/src/css/weather.css
@@ -33,7 +33,7 @@
         100% 100% at 0% 100%,
         var(--fade-gradient)
     );
-    z-index: var(-z-base);
+    z-index: var(--z-base);
 }
 
 .weather {
@@ -103,7 +103,7 @@
             100% 100% at 100% 0%,
             var(--fade-gradient)
         );
-        z-index: var(-z-base);
+        z-index: var(--z-base);
     }
     .weather--theme-solid {
         border-radius: 0 0 0 2rem;
